# Raspred

./: CMakeLists.txt
Lab3/: .gitignore  ;  CMakeLists.txt  lab3.cpp
Lab3/include/: synced_counter.h
Lab3/include/cache/: cache.h
Lab3/include/common/: common.h  exception.h  file.h  format.h  log.h
Lab3/include/encoder/: encoder.h
Lab3/include/mpi_helper/: details.h  helper.h
Lab3/include/subprocess/: subprocess.h
Lab3/src/: CMakeLists.txt  lab2.cpp  main.cpp  synced_counter.cpp  test1.cpp  test2.cpp
Lab3/src/cache/: CMakeLists.txt
Lab3/src/common/: CMakeLists.txt  file.cpp  log.cpp
Lab3/src/mpi_helper/: CMakeLists.txt  helper.cpp
Lab3/src/subprocess/: CMakeLists.txt
src/: CMakeLists.txt  lab1.cpp  lab2.cpp  lab3.cpp  lab4.cpp  lab5.cpp  lab6.cpp
